@@ -3,6 +3,7 @@ Version 9.1 - xxx edition. 21 August 2020
 Added compile setting to disable networking functions
 Added pc speaker audio driver (for Linux only)
 Added date & time field info to ZSF snapshots
+Added F-key function to show windows in background without having to open the menu
 
 Improved ZX Desktop: 
 -Added direct buttons
